<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appewtc.masterung.friendlyexercise.MakeExercise"
    android:background="@drawable/my_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/txtTitleMake"
        android:textSize="@dimen/h1"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitleMake"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:background="#96ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:text="@string/question" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choice1"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choice2"
                android:id="@+id/textView13"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText9"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choice3"
                android:id="@+id/textView14"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText10"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choice4"
                android:id="@+id/textView15"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText11"
                android:layout_weight="2"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:id="@+id/textView16"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/h2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice1"
                android:id="@+id/radioButton3"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice2"
                android:id="@+id/radioButton4"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice3"
                android:id="@+id/radioButton5"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice4"
                android:id="@+id/radioButton6"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSaveData"
        android:text="Save Data"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
